--- a/cart_page/templates/cart.html
+++ b/cart_page/templates/cart.html
@@ -18,11 +18,14 @@
             <a class = "active" href = "/cart">CART</a>
             <a class = "options" href = "/contacts">CONTACTS</a>
             <a class = "options" href = "/admin">ADMIN</a>
+            {% if not is_authenticated %}
+                <a href = '/registration' class="options">REGISTRATION</a>
+                <a href = "/authorization" class = "options">AUTHORIZATION</a>
+            {% else %}
+                <h1 class = "username">{{ current_user.name }}</h1>
+            {% endif %}
         </div>
-        
-        {% if current_user.is_authenticated %}
-            <h1 class = "username">{{ current_user.name }}</h1>
-        {% endif %}
+       
     </header>
 
     <main>
