--- a/admin_page/static/admin.css
+++ b/admin_page/static/admin.css
@@ -1,7 +1,7 @@
 header{
     /* background-color: aquamarine; */
-    width: Fixed (1,440px)px;
-    height: Fixed (80px)px;
+    width: 1440px;
+    height: 80px;
     padding: 17px 39px 17px 39px;
     gap: 387px;
     opacity: 0px;
@@ -12,7 +12,7 @@ header{
     padding: 4px, 122px, 4px, 122px;
     font-weight: 400px;
     display: flex;
-    width: 738px;
+    width: 80%;
     height: 47px;
     justify-content: space-around;
     /* margin: 0 auto; */
@@ -25,7 +25,7 @@ header{
 .links a{
     color: black;
     font-size: 24px;
-    width: 177px;
+    /* width: 177px; */
     height: 44px;
     /* background-color: blueviolet; */
     text-align: center;
@@ -270,15 +270,7 @@ main{
 
 }
 
-/* .buttons .pencil{
-    width: 15px;
-    height: 15px;
-    position: relative;
-    top: 20%;
-    right: 110%;
-} */
-
-.image, .info .pencil, .pencil-name, .pencil-price, .pencil-discount, .pencil-description{
+.image, .info .pencil, .pencil-name, .pencil-price, .pencil-discount, .pencil-description, .pencil-image{
     width: 30px;
     height: 30px;
     border: 3px solid black;
@@ -298,7 +290,7 @@ main{
 .pencil-discount{
     position: absolute;
     left: 200px;  
-    top: 90px;
+    top: 80px;
 }
 
 .pencil-price{
@@ -307,7 +299,7 @@ main{
     /* top: 7px; */
     position: absolute;
     left: 200px;  
-    top: 53px;
+    top: 45px;
 }
 
 .pencil .image{
@@ -319,6 +311,7 @@ main{
 }
 
 .modal-window{
+    display: flex;
     position: fixed;
     top: 0;
     left: 0;
@@ -332,8 +325,8 @@ main{
 .form{
     position: relative;
     display: flex;
-    width: 400px;
-    height: 200px;
+    width: 700px;
+    height: 350px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -349,25 +342,32 @@ main{
     width: 300px;
     text-align: left;
 }
-/* .modal-input{
+
+ 
+
+.modal-input{
     width: 450px;
     height: 74px;
     top: 139.5px;
     left: 125px;
     gap: 0px;
-    border-radius: 15px 0px 0px 0px;
-    border: 2px 0px 0px 0px;
+    border: 2px solid;
+    border-radius: 15px;
     opacity: 0px;
-
-    } */
+    font-size: 26px;
+    padding: 15px;
+}
 
 .name-button{
     width: 446px;
     height: 51px;
-    font: Inter 25px;
+    font: Inter;
+    font-size: 25px;
     background-color: white;
     border: none;
     text-decoration: underline;
+    text-align: center;
+    justify-content: center;
 }
 
 .modal-text{
@@ -384,20 +384,142 @@ main{
     text-align: left;        
 }
 
-/* .form{
-    width: 450px;
-    height: 124px;
-    gap: 0px;
-    border-radius: 15px 0px 0px 0px;
-    opacity: 0px;    
-} */
-
 .form-del{
     position: absolute;
 }
 
 .pencil-image{
     position: absolute;
-    margin-top: -250px;
-    margin-left: 375px;
+    top: 150px;
+    left: -50px;
+}
+
+.add-product{
+    display: inline-flex;
+    position: absolute;
+    gap: 30px;
+    right: 100px;
+    top: 75px;
+    width: 218px;
+    height: 45px;  
+    border-radius: 15px;
+}
+
+.add-product-p{
+   
+    width: 163px;
+    height: 35px;
+    top: 21.5px;
+    left: 1098px;
+    font-family: Roboto;
+    font-size: 18px;
+    font-weight: 800;
+    line-height: 21.09px;
+    text-align: center;    
+}
+
+.plus{
+    width: 45px;
+    height: 45px;
+    padding: 11.5px 11.5px 11.5px 11.5px;
+    gap: 0px;
+    border-radius: 15px;
+    border: 3px solid;  
+    font-size: 25px;
+    align-items: center;
+}
+
+.plus .plus-text{
+    position: relative;
+    width: 23px;
+    height: 23px;
+    top: -6px;
+}
+.modal-form form{
+    position: absolute;
+    width: 700px;
+    right: 31%;
+    size: 10px;
+    top: 5%;
+    height: 85% ;
+    text-align: center;
+    justify-content: center;
+    /* align-items: center; */
+    /* flex-direction: column; */
+    border: 3px solid black;
+    border-radius: 7%;
+    background-color: rgba(255, 255, 255);
+    padding-top: 3%;
+    /* opacity: 1; */
+}
+
+.modal-form{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+/* .modal-form .new-product{
+    font-weight: bold;
+} */
+.input-new-image{
+    width: 450px;
+    height: 5%;
+    top: 139.5px;
+    left: 125px;
+    gap: 0px;
+    border: 2px solid;
+    border-radius: 15px;
+    font-size: 20px;
+    padding: 3px;
+    padding-left: 3%;
+    /* text-align: center; */
+}
+
+
+.input-new-product, .input-new-description, .input-new-price, .input-new-discount, .input-new-count, .send-new-product{
+    /* background-color: #000000; */
+    width: 450px;
+    height: 5%;
+    border-radius: 15px;
+    border: 2px solid;
+    opacity: 0px;
+}
+.send-new-product{
+    margin-top: 60px;
+    font-size: 25px;
+    font-weight: 400;
+    line-height: 30.26px;
+    text-align: center;
+    background-color: #ffffff;
+    border: none;
+    text-decoration: underline;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-form h1{
+    width: 446px;
+    margin-top: 2.5%;
+    font-family: Inter;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 26.63px;
+    text-align: left;
+    margin-left: 130px;
+}
+
+.modal-form .new-product{
+    width: 470px;
+    height: 34px;
+    font-family: Inter;
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 33.89px;
+    text-align: center;    
 }
