--- a/contacts_page/templates/contacts.html
+++ b/contacts_page/templates/contacts.html
@@ -16,10 +16,16 @@
             <a class = "options" href = "/cart">CART</a>
             <a class = "active" href = "/contacts">CONTACTS</a>
             <a class = "options" href = "/admin">ADMIN</a>
+            {% if not is_authenticated %}
+                <a href = '/registration' class="options">REGISTRATION</a>
+                <a href = "/authorization" class = "options">AUTHORIZATION</a>
+            {% else %}
+                <h1 class = "username">{{ current_user.name }}</h1>
+            {% endif %}
         </div>
-        {% if current_user.is_authenticated %}
+        <!-- {% if current_user.is_authenticated %}
             <h1 class = "username">{{ current_user.name }}</h1>
-        {% endif %}
+        {% endif %} -->
     </header>
 
     <main><h1>CONTACTS PAGE</h1></main>
