--- a/home_page/static/home.css
+++ b/home_page/static/home.css
@@ -1,7 +1,7 @@
 header{
     /* background-color: aquamarine; */
-    width: Fixed (1,440px)px;
-    height: Fixed (80px)px;
+    width: 1440px;
+    height: 80px;
     padding: 17px 39px 17px 39px;
     gap: 387px;
     opacity: 0px;
@@ -12,7 +12,7 @@ header{
     padding: 4px, 122px, 4px, 122px;
     font-weight: 400px;
     display: flex;
-    width: 738px;
+    width: 80%;
     height: 47px;
     justify-content: space-around;
     /* margin: 0 auto; */
@@ -25,7 +25,7 @@ header{
 .links a{
     color: black;
     font-size: 24px;
-    width: 177px;
+    /* width: 177px; */
     height: 44px;
     /* background-color: blueviolet; */
     text-align: center;
@@ -33,13 +33,11 @@ header{
 
 
 main{
-    width: Fixed (1,440px)px;
-    height: Fixed (1,203px)px;
+    width: 1440px;
     top: 48px;
     left: 1561px;
     padding: 10px 10px 10px 39px;
     gap: 10px;
-    opacity: 0px;
 }
 
 main h1{
