--- a/home_page/templates/home.html
+++ b/home_page/templates/home.html
@@ -17,10 +17,17 @@
             <a class = "options" href = "/cart">CART</a>
             <a class = "options" href = "/contacts">CONTACTS</a>
             <a class = "options" href = "/admin">ADMIN</a>
+            {% if not is_authenticated %}
+                <a href = '/registration' class="options">REGISTRATION</a>
+                <a href = "/authorization" class = "options">AUTHORIZATION</a>
+            {% else %}
+                <h1 class = "username">{{ current_user.name }}</h1>
+            {% endif %}
+                
         </div>
-        {% if current_user.is_authenticated %}
+        <!-- {% if current_user.is_authenticated %}
             <h1 class = "username">{{ current_user.name }}</h1>
-        {% endif %}
+        {% endif %} -->
     </header>
     <main>
         <h1>HOME PAGE</h1>
