--- a/registration_page/templates/registration.html
+++ b/registration_page/templates/registration.html
@@ -10,7 +10,7 @@
 
 {% block header %}
     <div class = "links">
-        <a href = "/authorization">AUTHORIZATION</a>
+        <h1>REGISTRATION</h1>
     </div>
 {% endblock %}
 
@@ -26,4 +26,11 @@
         <input class = "registration_input" type = "text" name = "password2" required>
         <button class = "registration_submit" type = "submit">SEND</button>
     </form>
+    <div class="modal-window">
+        <div class="confirmed">
+            <h1>CONFIRMED</h1>
+            <a href="/authorization">-> AUTHORIZATION</a>
+        </div>
+    </div>
+    <script src="{{ url_for('registration.static', filename = 'js/registration.js') }}" defer></script>
 {% endblock %}
