--- a/shop_page/static/shop.css
+++ b/shop_page/static/shop.css
@@ -12,7 +12,7 @@ header{
     padding: 4px, 122px, 4px, 122px;
     font-weight: 400px;
     display: flex;
-    width: 738px;
+    width: 80%;
     height: 47px;
     justify-content: space-around;
     /* margin: 0 auto; */
@@ -25,7 +25,7 @@ header{
 .links a{
     color: black;
     font-size: 24px;
-    width: 177px;
+    /* width: 177px; */
     height: 44px;
     /* background-color: blueviolet; */
     text-align: center;
