--- a/admin_page/templates/admin.html
+++ b/admin_page/templates/admin.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    Shop
+    Admin
 {% endblock %}
 
 {% block link %}
@@ -95,7 +95,8 @@
         <div class = 'modal-window' style = 'display: none;'>
             <form method="post" class="form"> 
                 <p class="modal-text">CHANGE TEXT:</p>
-                <input class = "modal-input" type="" accept="" enctype = ''>
+                
+                <input class = "modal-input" id = "select-file" type="" accept="" enctype = ''>
                 <button name="change" type="submit" value="button-value" class="name-button">SEND</button>
             </form>
         </div>
