--- a/authorization_page/static/authorization.css
+++ b/authorization_page/static/authorization.css
@@ -56,3 +56,53 @@ h1{
     height: 33px;
     font-size: 24px;
 }
+
+.modal-window{
+    position: absolute;
+    justify-content: center;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
+    gap: 10px;
+    background-color: #FFFFFFB2;
+    
+}
+
+.not-registered{
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    width: 700px;
+    height: 350px;
+    border-radius: 25px;
+    border: 3px solid black;
+    background-color: #FFFFFF;
+    padding: 10px;
+    gap: 10px;
+    top: 25%;
+    right: 30%;
+}
+
+.not-registered h1{
+    width: 441px;
+    height: 95px;
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 35px;
+    margin: 0 auto;
+    line-height: 42.36px;
+    text-align: center;
+    margin-top: 20%;
+}  
+
+.not-registered a{
+    position: absolute;
+    width: 650px;
+    height: 95px;
+    font-family: Inter;
+    font-size: 25px;
+    font-weight: 400;
+    top: 310px;
+    text-align: right;
+    color: black;
+}
