--- a/home_page/static/home.css
+++ b/home_page/static/home.css
@@ -25,10 +25,20 @@ header{
 .links a{
     color: black;
     font-size: 24px;
-    /* width: 177px; */
     height: 44px;
-    /* background-color: blueviolet; */
     text-align: center;
+}
+#reg, #auth{
+    color: black;
+    font-size: 24px;
+    height: 44px;
+    text-align: center; 
+    text-decoration: underline;
+    transition: opacity 0.15s;
+
+}
+#reg:hover, #auth:hover {
+    opacity: 0.7;
 }
 
 
