--- a/home_page/templates/home.html
+++ b/home_page/templates/home.html
@@ -18,8 +18,8 @@
             <a class = "options" href = "/contacts">CONTACTS</a>
             <a class = "options" href = "/admin">ADMIN</a>
             {% if not is_authenticated %}
-                <a href = '/registration' class="options">REGISTRATION</a>
-                <a href = "/authorization" class = "options">AUTHORIZATION</a>
+                <a href = '/registration' class="options" id = 'reg'>REGISTRATION</a>
+                <a href = "/authorization" class = "options" id = "auth">AUTHORIZATION</a>
             {% else %}
                 <h1 class = "username">{{ current_user.name }}</h1>
             {% endif %}
