--- a/registration_page/static/reg.css
+++ b/registration_page/static/reg.css
@@ -71,6 +71,8 @@ h1{
 
 .confirmed{
     position: absolute;
+    justify-content: center;
+    align-items: center;
     width: 700px;
     height: 350px;
     border-radius: 25px;
@@ -78,7 +80,7 @@ h1{
     background-color: #FFFFFF;
     padding: 10px;
     gap: 10px;
-    
+    top: 25%;
 }
 
 .confirmed h1{
@@ -87,27 +89,29 @@ h1{
     font-family: Inter;
     font-weight: 400;
     font-size: 35px;
-    
-    
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 20%;
 }  
 
 .confirmed a{
+    position: absolute;
     width: 650px;
     height: 95px;
     font-family: Inter;
     font-size: 25px;
     font-weight: 400;
-    align-items: right;
+    top: 310px;
+    text-align: right;
     color: black;
 }
 
 .modal-window{
     position: absolute;
     justify-content: center;
-    align-items: center;
-    width: 1440px;
-    height: 600px;
-    padding: 109px, 369px, 109px, 369px;
+    top: 0px;
+    width: 100%;
+    height: 100vh;
     gap: 10px;
     background-color: #FFFFFFB2;
     
