--- a/registration_page/templates/registration.html
+++ b/registration_page/templates/registration.html
@@ -15,7 +15,7 @@
 {% endblock %}
 
 {% block content %}
-    <form method = "post" id = "registration_content">
+    <form method = "post" id = "registration_content" onsubmit="return ;">
         <h1>Login</h1>
         <input class = "registration_input" type = "text" name = "name" required>
         <h1>Email</h1>
@@ -26,7 +26,7 @@
         <input class = "registration_input" type = "text" name = "password2" required>
         <button class = "registration_submit" type = "submit">SEND</button>
     </form>
-    <div class="modal-window">
+    <div class="modal-window" style="display: none;">
         <div class="confirmed">
             <h1>CONFIRMED</h1>
             <a href="/authorization">-> AUTHORIZATION</a>
