--- a/shop_page/static/shop.css
+++ b/shop_page/static/shop.css
@@ -33,8 +33,6 @@ header{
 
 
 main{
-    width: Fixed (1,440px)px;
-    height: Fixed (1,203px)px;
     top: 48px;
     left: 1561px;
     padding: 10px 10px 10px 39px;
@@ -49,6 +47,8 @@ main{
     gap: 10px;
     opacity: 0px;
     /* background-color: red; */
+    margin: 0 auto;
+    margin-bottom: 50px;
 }
 
 .product img{
@@ -197,12 +197,15 @@ main{
 .active{
     font-weight: bold;
 }
+
+.cart{
+    display: none;
+}
+
 #active-cart{
     width: 28px;
-    height: 27px;
-    gap: 0px;
-    opacity: 0px;
-    border: 1px 0px 0px 0px;
+    height: 28px;
+    border: 1px;
     border: 1px solid #000000;
     background-color: #EFCB4A;
     border-radius: 50%;
@@ -211,8 +214,11 @@ main{
     font-weight: 700;
     line-height: 24.2px;
     text-align: center;
-    position: absolute;
-    margin-left: 100px;
+    display: block;
+    /* position: absolute;
+    margin-left: 100px; */
+    position: relative;
+    left: -5%;
 }
 
 .username{
